# efficiensee

./: .gitignore  README.md  init-db.sh  manage.py  requirements.txt  setup.cfg
efficiensee/: asgi.py  settings.py  urls.py  wsgi.py
prod_sheets/: settings.py
sheets/: models.py
sheets/client/: auth.py  script.py
sheets/management/commands/: run.py
sheets/migrations/: 0001_initial.py  0002_task_row_alter_task_name.py  0003_entry_progress.py  0004_alter_entry_date_alter_entry_duration_and_more.py  0005_task_archived.py  0006_task_group.py  0007_task_genre.py  0008_alter_entry_unique_together.py
utils/: datetime.py  string.py
